<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="deviceInfoLabel">Device Info</string>
    <string name="app_name">Port Authority</string>
    <string name="action_settings">Settings</string>
    <string name="deviceMacLabel">MAC Address</string>
    <string name="internalIpLabel">Internal IP Address</string>
    <string name="externalIpLabel">External IP Address</string>
    <string name="externalIpAddress">Fetching...</string>
    <string name="signalLabel">Signal Strength</string>
    <string name="hostDiscovery">Discover Hosts</string>

    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="icsblue">#33B5E5</color>

</resources>