<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black" >

    <TextView
        android:id="@+id/deviceInfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingBottom="10dp"
        android:text="@string/deviceInfoLabel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/icsblue" />

    <TextView
        android:id="@+id/deviceMacAddressLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/deviceInfoLabel"
        android:layout_toLeftOf="@+id/deviceMacAddress"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/deviceMacLabel"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/deviceMacAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/deviceInfoLabel"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textColor="@color/icsblue" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/deviceMacAddressLabel"
        android:background="@color/icsblue" />

    <TextView
        android:id="@+id/internalIpAddressLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/deviceMacAddressLabel"
        android:layout_toLeftOf="@+id/internalIpAddress"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/internalIpLabel"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/internalIpAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/deviceMacAddress"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textColor="@color/icsblue" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/internalIpAddress"
        android:background="@color/icsblue" />

    <TextView
        android:id="@+id/externalIpAddressLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/internalIpAddressLabel"
        android:layout_toLeftOf="@+id/externalIpAddress"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/externalIpLabel"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/externalIpAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/internalIpAddress"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/externalIpAddress"
        android:textColor="@color/icsblue" />

</RelativeLayout>